--- a/app/src/main/res/layout/activity_favorate.xml
+++ b/app/src/main/res/layout/activity_favorate.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Favorate">
+    tools:context=".Favorite">
 
 </android.support.constraint.ConstraintLayout>
