--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,7 @@
         android:layout_marginLeft="45dp" />
 
     <Button
-        android:id="@+id/favorate"
+        android:id="@+id/favorite"
         android:layout_width="131dp"
         android:layout_height="92dp"
         android:layout_alignParentStart="true"
@@ -36,7 +36,7 @@
         android:layout_marginTop="195dp"
         android:layout_marginEnd="43dp"
         android:layout_marginRight="43dp"
-        android:text="Favorate" />
+        android:text="Favorite" />
 
     <Button
         android:id="@+id/category"
