--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -7,9 +7,29 @@
     tools:context=".search">
 
     <EditText
-        android:layout_width="350dp"
+        android:id="@+id/searchBar"
+        android:layout_width="276dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp" />
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="0dp" />
 
+    <ListView
+        android:id="@+id/searchList"
+        android:layout_width="match_parent"
+        android:layout_height="469dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="42dp" />
 
+    <Button
+        android:id="@+id/startSearch"
+        android:layout_width="87dp"
+        android:layout_height="38dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="5dp"
+        android:layout_toEndOf="@+id/searchBar"
+        android:text="Search" />
 </RelativeLayout>
